vllm/nimbus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-nimbus-service
  labels:
    k8s-app: vllm-nimbus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"

spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    k8s-app: vllm-nimbus-nemotron
